--- a/promptmaster-library/package.json
+++ b/promptmaster-library/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.39.0",
     "lucide-react": "^0.563.0",
-    "react-dom": "^19.2.4",
     "react": "^19.2.4",
-    "@google/genai": "^1.39.0"
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
+    "@playwright/test": "^1.58.1",
+    "@types/node": "^22.19.7",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
