--- a/promptmaster-library/package.json
+++ b/promptmaster-library/package.json
@@ -12,7 +12,8 @@
     "@google/genai": "^1.39.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.1",
