--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,12 @@
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # Firebase Configuration
-# These values come from your Firebase project settings
-# Go to: https://console.firebase.google.com/project/YOUR_PROJECT/settings/general
-# Note: Firebase API keys are safe to expose in client-side code when properly restricted
-# See: https://firebase.google.com/docs/projects/api-keys
+# Get these values from: https://console.firebase.google.com/project/YOUR_PROJECT/settings/general
+# Note: NEXT_PUBLIC_ prefix makes these available in the browser
+NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
