Add production-ready Stripe payment integration
- Complete webhook infrastructure with signature verification
- Checkout session creation and customer portal
- Pro user authentication and authorization system
- Rate limiting and environment validation
- Health check endpoint for monitoring
- Enhanced Firestore security rules
- Comprehensive documentation (12,000+ words)

Ready for deployment. See QUICK_START.md for setup instructions.

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,21 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
+
+# Stripe Configuration
+# Get these from: https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+
+# Stripe Webhook Secret
+# Get this after creating webhook endpoint in Stripe Dashboard
+# For local testing: stripe listen --forward-to localhost:9002/api/stripe/webhook
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
+# Stripe Product/Price ID
+# Create a product and price in Stripe Dashboard, then copy the price ID here
+STRIPE_PRO_PRICE_ID=price_your_price_id
+
+# Application URL (for Stripe redirects)
+# Use your production URL in production, localhost for development
+NEXT_PUBLIC_APP_URL=http://localhost:9002
